Adding RF event count and event type filter
