# backend/internal/core/entity/event/enum.go
@@ -13,3 +13,18 @@ const (
 	GET_INFO            Type = "GET_INFO"
 	ACTION_UNRECOGNIZED Type = "ACTION_UNRECOGNIZED"
 )
+
+func GetType(typeStr string) Type {
+	types := make(map[string]Type)
+	types[string(RECEIVED_RF)] = RECEIVED_RF
+	types[string(SEND_RF)] = SEND_RF
+	types[string(MQTT_CONNECTED)] = MQTT_CONNECTED
+	types[string(RESTART)] = RESTART
+	types[string(RESET)] = RESET
+	types[string(SET_CONFIG)] = SET_CONFIG
+	types[string(GET_CONFIG)] = GET_CONFIG
+	types[string(GET_INFO)] = GET_INFO
+	types[string(ACTION_UNRECOGNIZED)] = ACTION_UNRECOGNIZED
+
+	return types[typeStr]
+}
